# photo-browser

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: deploy-pages.yml  release.yml
site/: index.html
src/: App.css  App.tsx  api.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  db.rs  lib.rs  logging.rs  main.rs  media.rs
src/components/: LangSwitch.tsx  Lightbox.tsx  PhotoGrid.tsx  Sidebar.tsx  Toolbar.tsx  icons.tsx
src/hooks/: useZoom.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
